@@ -10,6 +10,6 @@ module main;
 
   moo::my_type some_var;
 
-  assert final ($typename(some_var) == "byte");
+  assert final ($typename(some_var) == "bit signed[7:0]");
 
 endmodule
