@@ -66,6 +66,7 @@ protected:
   void propagate_type(exprt &expr, const typet &type);
 
   typet elaborate_type(const typet &);
+  typet elaborate_package_scope_typedef(const type_with_subtypest &);
   typet convert_enum(const class verilog_enum_typet &);
   array_typet convert_unpacked_array_type(const type_with_subtypet &);
   typet convert_packed_array_type(const type_with_subtypet &);
